--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 :root {
     --color-main: rgb(241, 196, 49);
     --color-white: #ececec;
-    --color-gray: #e3e3e3c0;
+    --color-gray: rgb(4, 56, 50);
     --color-red: #961818;
-    --color-black: rgb(37, 7, 7);
+    --color-black: rgb(7, 37, 17);
+    --color-graytwo: rgba(230, 230, 230, 0.8);
+    --color-green: rgba(15, 238, 34, 0.804);
+    --color-greentwo: rgb(42, 99, 44);
 }
 
 *{
@@ -24,11 +27,19 @@
 aside {
     padding: 2rem;
     color: var(--color-black);
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 0;
 }
 
 header {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .logo {
@@ -36,3 +47,342 @@ header {
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.switch {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 40px;
+    position: relative;
+    background-color: var(--color-gray);
+}
+
+.switch::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    background-color: var(--color-white);
+    top: 0;
+    left: 0;
+    right: unset;
+    border-radius: 50%;
+    transition: .3s ease all;
+    box-shadow: 0px 0px 2px 2px rgb(37, 7, 7, 0.2);
+}
+
+.switch.active {
+    background: var(--color-main);
+}
+
+.switch.active span {
+    color: var(--color-black);
+}
+
+.switch.active::after {
+    right: 0;
+    left: unset;
+}
+
+.switch span {
+    display: block;
+    background: none;
+    color: var(--color-white);
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.bi-hand-index-thumb-fill,
+.bi-hand-index-thumb {
+    transform: rotateZ(90deg);
+}
+
+.boton-menu {
+    background-color: transparent;
+    border: 0;
+    color: var(--color-black);
+    font-size: 1rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-weight: 600;
+    padding: 1rem;
+    font-size: .85rem;
+}
+
+.boton-menu.active {
+    background-color: var(--color-white);
+    color: var(--color-main);
+    width: 100%;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    position: relative;
+}
+
+.boton-menu.active::before {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    bottom: 100%;
+    right: 0;
+    background-color: transparent;
+    border-bottom-right-radius: .5rem;
+    box-shadow: 0 1rem 0 var(--color-white);
+}
+
+.boton-menu.active::after {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    top: 100%;
+    right: 0;
+    background-color: transparent;
+    border-top-right-radius: .5rem;
+    box-shadow: 0 -1rem 0 var(--color-white);
+}
+
+.boton-carrito {
+    margin-top: 2rem;
+}
+
+.numerito {
+    background-color: var(--color-white);
+    color: var(--color-main);
+    padding: .25rem;
+    border-radius: .15rem .25rem;
+}
+
+.boton-carrito.active .numerito {
+    background-color: var(--color-main);
+    color: var(--color-white);
+}
+
+.texto-footer {
+    font-size: 0.85rem;
+}
+
+main {
+    background-color: var(--color-white);
+    margin: 1rem;
+    margin-left: 0;
+    border-radius: 2rem;
+    padding: 3rem;
+}
+
+
+
+/* editar */
+
+
+
+.buscador {
+    display: flex;
+    width: 70vw;
+    margin-bottom: 2rem;
+}
+
+.buscador input {
+    width: 80%;
+}
+
+.buscador label {
+    color: var(--color-white);
+    background: var(--color-black);
+    cursor: pointer;
+}
+
+.titulo-principal {
+    color: var(--color-black);
+    margin-bottom: 2rem;
+}
+
+.contenedor-productos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+.producto-imagen {
+    width: 100%;
+    border-radius: 1rem;
+}
+
+.producto-detalles {
+    background-color: var(--color-main);
+    color: var(--color-black);
+    padding: .5rem;
+    border-radius: 1rem;
+    margin-top: -2rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+}
+
+.producto-titulo {
+    font-size: 1rem;
+}
+
+.producto-agregar {
+    border: 0;
+    background-color: var(--color-white);
+    color: var(--color-gray);
+    font: 500;
+    text-transform: uppercase;
+    padding: .5rem;
+    border-radius: 2rem;
+    cursor: pointer;
+    border: 2px solid var(--color-white);
+    transition: background-color .2s, color .2s;
+}
+
+.producto-agregar:hover {
+    background-color: var(--color-gray);
+    color: var(--color-white);
+}
+
+
+/* CARRITO */
+
+.numeros-carrito {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 4rem;
+    margin-right: 2rem;
+}
+
+/*SEGUIR EDITANDO*/
+.contenedor-carrito {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+
+.carrito-vacio,
+.carrito-comprado {
+    color: var(--color-red);
+}
+
+.carrito-comprado {
+    color: var(--color-greentwo);
+}
+
+.carrito-productos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.carrito-producto {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-graytwo);
+    color: var(--color-gray);
+    padding: .5rem;
+    padding-right: 1.5rem;
+    border-radius: 1rem;
+}
+
+.carrito-producto-imagen {
+    width: 4rem;
+    border-radius: 1rem;
+}
+
+.carrito-producto small {
+    font-size: .75rem;
+}
+
+.carrito-producto-eliminar {
+    border: 0;
+    background-color: transparent;
+    color: var(--color-red);
+    cursor: pointer;
+}
+
+.carrito-control {
+    display: flex;
+    justify-content: space-between;
+}
+
+.carrito-control-boton {
+    background-color: transparent;
+    border: 0;
+}
+
+.carrito-control-signo {
+    color: var(--color-graytwo);
+    background-color: var(--color-graytwo);
+    font-size: 1rem;
+    z-index: 3;
+}
+/* EDITARRRRRR */
+
+
+.carrito-acciones {
+    display: flex;
+    justify-content: space-between;
+}
+
+.carrito-acciones-vaciar {
+    border: 0;
+    background-color: var(--color-red);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: var(--color-graytwo);
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.carrito-acciones-derecha {
+    display: flex;
+}
+
+.carrito-acciones-total {
+    display: flex;
+    background-color: var(--color-graytwo);
+    padding: 1rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    color: var(--color-red);
+    text-transform: uppercase;
+    gap: .75rem;
+}
+
+.carrito-acciones-comprar {
+    border: 0;
+    background-color: var(--color-green);
+    padding: 1rem;
+    color: var(--color-black);
+    text-transform: uppercase;
+    cursor: pointer;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+/*
+.disabled {
+    display: none;
+}
+*/
+
+/*SEGUIR EDITANDO FORMULARIO*/
+
+
+
+
+
