--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,10 @@ body.dark .producto-agregar:hover {
     color: var(--color-greentwo);
 }
 
+body.dark .carrito-comprado {
+    color: var(--color-green);
+}
+
 .carrito-productos {
     display: flex;
     flex-direction: column;
@@ -403,14 +407,14 @@ body.dark .producto-agregar:hover {
 }
 
 .carrito-control-boton {
-    background-color: var(--color-graytwo);
+    background-color: transparent;
     border: 0;
     cursor: pointer;
 }
 
 .carrito-control-signo {
     color: var(--color-gray);
-    background-color: var(--color-graytwo);
+    background-color: transparent;
     font-size: 1rem;
     z-index: 1;
     font-weight: 800;
@@ -466,11 +470,17 @@ body.dark .producto-agregar:hover {
 }
 
 .formulario {
-    padding: 2rem;
+    padding: 2.4rem;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 1rem;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    border: 3px solid var(--color-black);
+}
+
+body.dark .formulario {
+    box-shadow: 0 0 20px rgba(7, 198, 7, 0.529);
+    border: 3px solid var(--color-green);
 }
 
 .formulario-div {
@@ -481,21 +491,31 @@ body.dark .producto-agregar:hover {
 
 .titulo-formulario {
     font-size: 1.2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.4rem;
     color: var(--color-gray);
+    text-shadow: 1px 1px 2px var(--color-gray);
+}
+
+body.dark .titulo-formulario {
+    color: var(--color-green);
+    text-shadow: 1px 1px 2px var(--color-green);
 }
 
 .formulario-div label , .formulario-div option {
     color: var(--color-black);
     font-size: .9rem;
     font-weight: 400;
-    margin-bottom: .5rem;
+    margin-bottom: .6rem;
+}
+
+body.dark .formulario-div label{
+    color: var(--color-white);
 }
 
 .formulario-div input, .formulario select {
     padding: .4rem .8rem;
     border-radius: .8rem;
-    margin-bottom: .5rem;
+    margin-bottom: .6rem;
     background-color: var(--color-graytwo);
     border: 2px solid var(--color-black);
     outline: none;
@@ -518,15 +538,14 @@ body.dark .producto-agregar:hover {
     border: 0;
     border-radius: 1rem;
     cursor: pointer;
-    margin-top: 1.3rem;
+    margin-top: 1.5rem;
     transition: .3s ease all;
 }
 
 .boton-formulario:hover {
     background-color: var(--color-greentwo);
 }
-/*
+
 .disabled {
     display: none;
 }
-*/
